Footer overflow fixed

--- a/styles.css
+++ b/styles.css
@@ -196,15 +196,22 @@
       font-size: 1.2em; /* Adjust the size as needed */
     }
 
-
     footer {
+        display: flex;
+        flex-direction: column;
         background-color: #FFD760;
+        align-items: center; /* Center items horizontally */
+        gap: 20px;
+    }
+    
+    footer .item {
         color: black;
         text-align: center;
         padding: 10px;
         width: 100%; /* Ensures it stays within the viewport */
 
     }
+    
     input[type="text"], input[type="email"], input[type="tel"], textarea {
         width: 95%;
         padding: 10px;
